Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38482

Font style doesn't follow the font weight

XMLWordPrintable

    • 517da68893be9e6d97c7993922c573de9560604d

      Font weight light and normal looks similar even font has both different styles available. See attached example and picture. Example uses source sans pro font and different weights are set from qss but only bold font is set correctly.

        1. compareFamily-output.txt
          12 kB
        2. fonts.png
          fonts.png
          4 kB
        3. FontWeightTest.zip
          26 kB
        4. result.png
          result.png
          149 kB
        For Gerrit Dashboard: QTBUG-38482
        # Subject Branch Project Status CR V

            ntg Pierre Rossi
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes